# Banomalies_ML_24

./: pyproject.toml
.virtual_documents/notebooks/01_global_fits/: 01_fits.ipynb
covariances/exp/: fast_likelihood_leptons.yaml.p  fast_likelihood_quarks.yaml.p
covariances/sm/: fast_likelihood_leptons.yaml_CKMSchemeRmuBtaunuBxlnuDeltaM.p  fast_likelihood_quarks.yaml_CKMSchemeRmuBtaunuBxlnuDeltaM.p
notebooks/: BKnunu.ipynb  observables.yaml  rd.ipynb
notebooks/01_global_fits/: 01_fits.ipynb  01b_fitlines.ipynb  fit1.py  fit3.py  fitBKnunu.py  fitRD.py  fit_rotBII.py  linefits.py  randompoints.py  randompoints_scII.py  rotBI.yaml  rotBII.yaml  rotBIII.tex  rotBIII.yaml  scenarios.py
notebooks/02_plots/: observable_plots.ipynb  plots.ipynb
notebooks/03_ml/: ml.ipynb  observables.csv  randompoints.py  xgboost.ipynb
notebooks/data/: plotdata.csv  results_01.txt  results_02.txt  results_03.txt
